# chat_box_rust

./: .gitignore  README.md  config.yaml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  tsconfig.json
.github/workflows/: rust.yml
src/: App.vue  main.ts
src-tauri/: 2  Cargo.toml  build.rs  config.yaml  pyproject.toml  tauri.conf.json
src-tauri/database/: chat_database.db
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  models.rs  state.rs
src-tauri/src/commands/: ai.rs  conversation.rs  database.rs  message.rs  mod.rs  voice.rs
src-tauri/src/components/: mod.rs
src-tauri/src/components/agent/: ollama.rs
src-tauri/src/components/asr/: mod.rs  vosk.rs  vosk_python.rs
src-tauri/src/components/config/: config.rs
src-tauri/src/components/tts/: kokoro.rs  natural_tts.rs
src-tauri/src/python/: edgetts.py  kokoroTTS.py  voskASR.py
src-tauri/src/services/: database.rs  mod.rs
src-tauri/src/services/agent/: mod.rs  ollama.rs
src-tauri/src/services/asr/: mod.rs  vosk.rs  vosk_python.rs
src-tauri/src/services/config/: config.rs
src-tauri/src/services/tts/: kokoro_tts.rs  mod.rs
src-tauri/src/utils/: config.rs  logger.rs  mod.rs  vosk_process.rs
src/components/chat/: ConversationList.vue  MessageItem.vue  MessagePanel.vue
src/components/menu/: CollapsePanel.vue
src/components/settings/: AiModelSettings.vue  AppBehaviorSettings.vue  DatabaseConfigPanel.vue  SettingsView.vue  UiSettings.vue  VoiceSettings.vue
src/styles/: material-you.css
src/types/: index.ts
src/utils/: clipboard.ts
