[package]
name = "chat_box"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "chat_box_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
log = "0.4"
env_logger = "0.11"
ollama-rs = { git = "https://github.com/pepperoni21/ollama-rs.git", branch = "master", features = ["stream"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
smol = "2.0.2"
pyo3 = { version = "0.24.1", features = ["auto-initialize", "full"] }
rodio = "0.20.1"
config = "0.15.11"
anyhow = "1.0.98"
toml = "0.8.20"
once_cell = "1.19.0"

