[package]
name = "chat_box"
version = "0.1.0"
description = "A Tauri App"
authors = ["pengheng"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "chat_box_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }
log = "0.4.27"
env_logger = "0.11.8"
# flate2 = "1.1.1"
# tar = "0.4.44"
# zip = "2.6.1"
# yoke = { version = "0.8.0" }
# ureq = "3.0.11"
# reqwest = { version = "0.12.15", features = ["blocking"] }

[features]
reqwest = []

[dependencies]
serde_yaml = "0.9.34+deprecated"
termcolor = "1.4.1"
tauri = { version = "2.5.1", features = [] }
tauri-plugin-opener = "2.2.6"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
chrono = "0.4.41"
async-stream = "0.3.6"
log = "0.4.27"
futures = "0.3.31"
env_logger = "0.11.8"
ollama-rs = { git = "https://github.com/pepperoni21/ollama-rs.git", branch = "master", features = ["stream"] }
tokio = { version = "1.45.0", features = ["full"] }
tokio-stream = "0.1.17"
smol = "2.0.2"
pyo3 = { version = "0.24.2", features = ["auto-initialize", "full"] }
rodio = "0.20.1"
config = "0.15.11"
anyhow = "1.0.98"
toml = "0.8.22"
once_cell = "1.21.3"
vosk = "0.3.1"
cpal = "0.15.3"
num-traits = "0.2.19"
rusqlite = "0.35.0"
scopeguard = "1.2.0"
tauri-plugin-dialog = "2"
